# python-project-lvl1

./: .gitignore  Makefile  README.md  brain_games_gcd  brain_games_go  pyproject.toml
brain_games/: ___init___.py  brain_gamelib.py  brain_global.py  brain_go.py  brain_lib.py  brain_servicelib.py  cli.py
brain_games/games/: __init__.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_progression.py  do_calc.py  do_even.py  do_gcd.py  do_prime.py  do_progss.py
