[tool.poetry]
name = "hexlet-code"
version = "1.0.2"
description = "My 1st Python project. Five interactive 'Brain games': Calculator, Odd or Even, Progression, Prime, Greatest common divisor"
authors = ["Mike <mkost148@gmail.com>"]
packages = [
  { include = "brain_games" },
]

classifiers = ["Topic :: Games/Entertainment :: Puzzle Games"]

repository = "https://github.com/mkost148/python-project-lvl1"

[tool.poetry.scripts]
brain-games = "brain_games.brain_go:main"
brain-even = "brain_games.brain_go:do_even"
brain-calc = "brain_games.brain_go:do_calc"
brain-gcd = "brain_games.brain_go:do_gcd"
brain-progression = "brain_games.brain_go:do_progss"
brain-prime = "brain_games.brain_go:do_prime"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
