[tool.poetry]
name = "hexlet-code"
version = "1.0.3"
description = "My 1st Python project. Five interactive 'Brain games': Calculator, Odd or Even, Progression, Prime, Greatest common divisor"
authors = ["Mike <mkost148@gmail.com>"]
packages = [
  { include = "brain_games" },
]

classifiers = ["Topic :: Games/Entertainment :: Puzzle Games"]

repository = "https://github.com/mkost148/python-project-lvl1"

[tool.poetry.scripts]
brain-games = "brain_games.brain_go:game"
brain-even = "brain_games.scripts.do_even:main"
brain-calc = "brain_games.scripts.do_calc:main"
brain-gcd = "brain_games.scripts.do_gcd:main"
brain-progression = "brain_games.scripts.do_progss:main"
brain-prime = "brain_games.scripts.do_prime:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
jupyter = "^1.0.0"
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
